--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,3 +24,6 @@ phases:
       - docker push 089140685165.dkr.ecr.us-east-1.amazonaws.com/mydockerrepo:$IMAGE_TAG
       - echo Writing image definitions file...
       - printf '[{"name":"ecomm","imageUri":"%s"}]' $REPOSITORY_U
+      
+artifacts:
+      files: imagedefinitions.json
