--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
+      - docker login -u shaikkhaleeljibran -p Khaleelshaik565
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 089140685165.dkr.ecr.us-east-1.amazonaws.com  
       - REPOSITORY_URI=089140685165.dkr.ecr.us-east-1.amazonaws.com/mydockerrepo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
